--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -3,6 +3,6 @@
 {% block container %}
   <div class="row">
     <h1>Мы находимся по адресу:</h1>
-    <p>с. Трансфобия Московская обл.</p>
+    <p>с. Трансформеровка, Московская обл.</p>
   </div>
 {% endblock container %}
