--- a/templates/header.html
+++ b/templates/header.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container">
-    <a class="navbar-brand" href="{{ url_for('get_transformer_list') }}"><img src="{{ url_for('static', filename='img/logo.png') }}" style="width: 48px" alt=""></a>
+    <a class="navbar-brand" href="{{ url_for('transformers.get_transformer_list') }}"><img src="{{ url_for('static', filename='img/logo.png') }}" style="width: 48px" alt=""></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -8,14 +8,17 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="{{ url_for('get_transformer_list') }}">Главная</a>
+          <a class="nav-link active" aria-current="page" href="{{ url_for('transformers.get_transformer_list') }}">Главная</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('get_contacts') }}">Контакты</a>
+          <a class="nav-link" href="{{ url_for('contacts.get_contacts') }}">Контакты</a>
         </li>
       </ul>
       <form class="d-flex" role="search">
-        <input name="name" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        {% if request.args.get('type') %}
+          <input type="hidden" name="type" value="{{ request.args.get('type') }}">
+        {% endif %}
+        <input name="name" value="{{ request.args.get('name', '') }}" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success" type="submit">Search</button>
       </form>
     </div>
